[package]
name = "poe_api_process"
version = "0.2.0"
edition = "2024"
publish = ["crates-io"]
authors = ["Jerome Leong <jeromeleong1998@gmail.com>"]
description = "Poe API for rust"
repository = "https://github.com/jeromeleong/poe_api_process"
license = "MIT"
keywords = ["poeapi", "ai"]
categories = ["api-bindings"]

[features]
trace = []

[dependencies]
reqwest = { version = "0.12.19", features = ["json", "stream", "multipart"] }
tokio = { version = "1.45.1", features = ["full", "fs"] }
tokio-util = { version = "0.7.10", features = ["io"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
thiserror = "2.0.12"
bytes = "1.10.1"
tracing = { version = "0.1.41", features = ["async-await"] }
url = "2.5.0"

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
tempfile = "3.20.0"